--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
-	base = 970b6a5e6
-	trimbase = 
+	base = cf8660968
+	trimbase = 970b6a5e6
 	parent = upstream
 	previous = 1e73b2d12
