--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = f69ae1323
-	trimbase = a6202e59e
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
