--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = 16258f126
-	trimbase = 
+	base = e42110371
+	trimbase = 16258f126
 	parent = upstream
 	previous = 1e73b2d12
