--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = 4f70e4be3
-	trimbase = 4f861b4a6
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
