--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = ef106bbf0
-	trimbase = 
+	base = eda5f33c7
+	trimbase = ef106bbf0
 	parent = upstream
 	previous = 1e73b2d12
