--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = 35b005f5c
-	trimbase = 1cd064e87
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
