--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
-	base = 699196aae
-	trimbase = 
+	base = c92db8a8a
+	trimbase = 699196aae
 	parent = upstream
 	previous = 1e73b2d12
