--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = c9e2ed520
-	trimbase = 
+	base = 709c54b9f
+	trimbase = c9e2ed520
 	parent = upstream
 	previous = 1e73b2d12
