--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = 7a57d48c7
-	trimbase = 4b74785c4
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
