--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = d6616d4c5
-	trimbase = 
+	base = 0e5326029
+	trimbase = d6616d4c5
 	parent = upstream
 	previous = 1e73b2d12
