--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = baa44c257
-	trimbase = 
+	base = d49e20319
+	trimbase = baa44c257
 	parent = upstream
 	previous = 1e73b2d12
