--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = 0605b74ba
-	trimbase = a228cf33f
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
