--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
-	base = 6cd2490d5
-	trimbase = 
+	base = c117638dc
+	trimbase = 6cd2490d5
 	parent = upstream
 	previous = 1e73b2d12
