--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = 0cc898ca8
-	trimbase = f8234887a
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
