--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
 	base = dcd203cbe
-	trimbase = c13743201
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
