--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = d52b62a3c
-	trimbase = 
+	base = 8ae5d08eb
+	trimbase = d52b62a3c
 	parent = upstream
 	previous = ba8f623cf
