--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
 	base = 7f61ce647
-	trimbase = 132696a06
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
