--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	base = ed134eeee
-	trimbase = 
+	base = 1b027eb2d
+	trimbase = ed134eeee
 	parent = upstream
 	previous = ba8f623cf
