--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
 	base = e259198cf
-	trimbase = d1bb64a89
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
