--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = 8562123e4
-	trimbase = 
+	base = 86045646e
+	trimbase = 8562123e4
 	parent = upstream
 	previous = ba8f623cf
