--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
 	base = 1d56d557a
-	trimbase = 6a7f12868
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
