--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 28279bcca
 	base = f1ece02af
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = c404f05ac
+	trimbase = 
