--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ba8f623cf
-	base = 2dbdfdd2c
+	base = ef7413b4f
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 2dbdfdd2c
