--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 28279bcca
 	base = c738434a3
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 6b55c3716
+	trimbase = 
