--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
 	base = 1db4b98a0
-	trimbase = 5d73e1e48
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
