--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = 14f24fac5
-	trimbase = 
+	base = b62a2f6c5
+	trimbase = 14f24fac5
 	parent = upstream
 	previous = ba8f623cf
