--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
 	base = fe1ea6ef1
-	trimbase = 0189ebc95
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
