--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = 362bd8a34
-	trimbase = 
+	base = 25d7314fe
+	trimbase = 362bd8a34
 	parent = upstream
 	previous = ba8f623cf
