--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = 98649a57a
-	trimbase = 
+	base = a7e897968
+	trimbase = 98649a57a
 	parent = upstream
 	previous = ba8f623cf
