--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = 36aeca8fb
-	trimbase = a8dc7ac94
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
