--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
 	base = 6d9f36ffd
-	trimbase = bd9046432
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
