--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = 542208f75
-	trimbase = 
+	base = cebc7812e
+	trimbase = 542208f75
 	parent = upstream
 	previous = ba8f623cf
