--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
 	base = c89c8d8db
-	trimbase = 870bce99a
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
