--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = 4a5395142
-	trimbase = 
+	base = 3e590dc87
+	trimbase = 4a5395142
 	parent = upstream
 	previous = ba8f623cf
