--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = d1a23f6fd
-	trimbase = 
+	base = edd25cff5
+	trimbase = d1a23f6fd
 	parent = upstream
 	previous = ba8f623cf
