--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = e08ce793a
-	trimbase = 6a7b53691
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
