--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
-	base = ca0368505
-	trimbase = 
+	base = f11432b38
+	trimbase = ca0368505
 	parent = upstream
 	previous = ba8f623cf
