--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = 7aa4d6c6f
-	trimbase = 
+	base = 1d1a6c7a8
+	trimbase = 7aa4d6c6f
 	parent = upstream
 	previous = ba8f623cf
