--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
 	base = 6bde610ef
-	trimbase = 517f92d72
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
