--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = 7c6d75f59
-	trimbase = 
+	base = 6aaac388b
+	trimbase = 7c6d75f59
 	parent = upstream
 	previous = ba8f623cf
