--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = 6856d6385
-	trimbase = 1c088d1ea
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
