--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = aed1915ee
-	trimbase = 
+	base = a2e5486d3
+	trimbase = aed1915ee
 	parent = upstream
 	previous = ba8f623cf
