--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = 9fdab985f
-	trimbase = 
+	base = e22a4b974
+	trimbase = 9fdab985f
 	parent = upstream
 	previous = ba8f623cf
