--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = ff27532c8
-	trimbase = 41359d700
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
