--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
-	base = 08447d0a3
-	trimbase = 
+	base = 5278a5c3e
+	trimbase = 08447d0a3
 	parent = upstream
 	previous = ba8f623cf
