--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
 	base = d40f28266
-	trimbase = 37c22cec3
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
