--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = 9b978de84
-	trimbase = 10ff17999
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
