--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = 0b65f7f48
-	trimbase = 7da48d230
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
