--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = 52742d327
-	trimbase = 
+	base = ccfa3a7e8
+	trimbase = 52742d327
 	parent = upstream
 	previous = ba8f623cf
