--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = 2c7667d00
-	trimbase = d161b5964
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
