--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
-	base = c4b37f31b
-	trimbase = 
+	base = a0a94b2d0
+	trimbase = c4b37f31b
 	parent = upstream
 	previous = ba8f623cf
