--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = a0a68b893
-	trimbase = ca9055ea3
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
