--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = 11f9b5148
-	trimbase = 
+	base = 1331ee38a
+	trimbase = 11f9b5148
 	parent = upstream
 	previous = ba8f623cf
