--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = da4f4bd6d
-	trimbase = d0660e9f2
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
