--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = 40cd5c0d3
-	trimbase = 
+	base = bc3edeef4
+	trimbase = 40cd5c0d3
 	parent = upstream
 	previous = ba8f623cf
