--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
 	base = 86ceaaa30
-	trimbase = 091a2ecbf
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
