--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = f1ce912ee
-	trimbase = 
+	base = 5d31d1be0
+	trimbase = f1ce912ee
 	parent = upstream
 	previous = ba8f623cf
