--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = fbbb6625b
-	trimbase = ea45a58a2
+	trimbase = 
 	parent = upstream
 	previous = 28279bcca
