--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
-	base = a4b6dd3b6
-	trimbase = 
+	base = ffd454b4e
+	trimbase = a4b6dd3b6
 	parent = upstream
 	previous = ba8f623cf
