--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = 30b2f2c01
-	trimbase = c4892a8c3
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
