--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = 6da4d4676
-	trimbase = 
+	base = 5041a7940
+	trimbase = 6da4d4676
 	parent = upstream
 	previous = 0ac576945
