--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	base = f44f1e18e
-	trimbase = 
+	base = ee6838afe
+	trimbase = f44f1e18e
 	parent = upstream
 	previous = 0ac576945
