--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = 28905d330
-	trimbase = 
+	base = 4943fd773
+	trimbase = 28905d330
 	parent = upstream
 	previous = 0ac576945
