--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
 	base = aab88a340
-	trimbase = ff58df78a
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
