--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = 9e69a42cf
-	trimbase = 
+	base = 9ee6644b3
+	trimbase = 9e69a42cf
 	parent = upstream
 	previous = 0ac576945
