--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = ba8f623cf
 	base = ef7413b4f
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 2dbdfdd2c
+	trimbase = 
