--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0ac576945
-	base = aecda80b5
+	base = e4e07a1e6
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = aecda80b5
