--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = ba8f623cf
 	base = 07b2d549d
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 2c1bc47b2
+	trimbase = 
