--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0ac576945
-	base = 3944e0c97
+	base = 9cbc54cca
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 
+	trimbase = 3944e0c97
