--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
 	base = b62a2f6c5
-	trimbase = 14f24fac5
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
