--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = 96b27bcf3
-	trimbase = 
+	base = 28ede6f9e
+	trimbase = 96b27bcf3
 	parent = upstream
 	previous = 0ac576945
