--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = 2b59f53f3
-	trimbase = 
+	base = 706d5c005
+	trimbase = 2b59f53f3
 	parent = upstream
 	previous = 0ac576945
