--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = 7e95ba5ee
-	trimbase = 8999c361d
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
