--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
-	base = d3a56c33a
-	trimbase = 
+	base = 8a6c5313c
+	trimbase = d3a56c33a
 	parent = upstream
 	previous = 0ac576945
