--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = 11ba2aded
-	trimbase = 
+	base = bec5d1a1c
+	trimbase = 11ba2aded
 	parent = upstream
 	previous = 0ac576945
