--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = 918853d72
-	trimbase = 
+	base = c538d6762
+	trimbase = 918853d72
 	parent = upstream
 	previous = 0ac576945
