--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = f11432b38
-	trimbase = ca0368505
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
