--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = 976d89498
-	trimbase = 
+	base = 6cc0f5e45
+	trimbase = 976d89498
 	parent = upstream
 	previous = 0ac576945
