--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = 01114f1f1
-	trimbase = 
+	base = 9e319f17b
+	trimbase = 01114f1f1
 	parent = upstream
 	previous = 0ac576945
