--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
 	base = e22a4b974
-	trimbase = 9fdab985f
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
