--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = a106d3a4c
-	trimbase = 7309c0ec4
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
