--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
-	base = 4ec916c7e
-	trimbase = 
+	base = 5bb3d2375
+	trimbase = 4ec916c7e
 	parent = upstream
 	previous = 0ac576945
