--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
 	base = 9da54d78d
-	trimbase = 307dc0619
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
