--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
-	base = 1fe8c552e
-	trimbase = 
+	base = ad04a20c0
+	trimbase = 1fe8c552e
 	parent = upstream
 	previous = 0ac576945
