--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = 77540c3d6
-	trimbase = b90a2001f
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
