--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = 24f4c5a7c
-	trimbase = 
+	base = 7075e4dd5
+	trimbase = 24f4c5a7c
 	parent = upstream
 	previous = 0ac576945
