--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = ccfa3a7e8
-	trimbase = 52742d327
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
