--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = ba1ac432d
-	trimbase = 
+	base = 5bb86192e
+	trimbase = ba1ac432d
 	parent = upstream
 	previous = 0ac576945
