--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = a0a94b2d0
-	trimbase = c4b37f31b
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
