--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = 4174c2a26
-	trimbase = 
+	base = 71befcc93
+	trimbase = 4174c2a26
 	parent = upstream
 	previous = 0ac576945
