--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = bc3edeef4
-	trimbase = 40cd5c0d3
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
