--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = dc3fc25c2
-	trimbase = 
+	base = 41c7ffe48
+	trimbase = dc3fc25c2
 	parent = upstream
 	previous = 0ac576945
