--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = ffd454b4e
-	trimbase = a4b6dd3b6
+	trimbase = 
 	parent = upstream
 	previous = ba8f623cf
