--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
-	base = 2fe94a200
-	trimbase = 
+	base = da6079bc3
+	trimbase = 2fe94a200
 	parent = upstream
 	previous = 0ac576945
