--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = 62155122d
-	trimbase = 10828a7a6
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
