--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = 5550679d9
-	trimbase = 
+	base = 518744516
+	trimbase = 5550679d9
 	parent = upstream
 	previous = 31f485684
