--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = 295cb2c61
-	trimbase = 
+	base = 8618a2185
+	trimbase = 295cb2c61
 	parent = upstream
 	previous = 31f485684
