--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0ac576945
 	base = e4e07a1e6
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = aecda80b5
+	trimbase = 
