--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 31f485684
-	base = b76b87962
+	base = 46daba9a1
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = b76b87962
