--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0ac576945
 	base = 9cbc54cca
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 3944e0c97
+	trimbase = 
