--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = 0737329a7
-	trimbase = 
+	base = 0d57e2876
+	trimbase = 0737329a7
 	parent = upstream
 	previous = 31f485684
