--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
 	base = 6f7b7580e
-	trimbase = 34a3930aa
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
