--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = 276818759
-	trimbase = 
+	base = 0d67cbf11
+	trimbase = 276818759
 	parent = upstream
 	previous = 31f485684
