--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
-	base = 728c2c873
-	trimbase = 
+	base = f150cf50d
+	trimbase = 728c2c873
 	parent = upstream
 	previous = 31f485684
