--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
 	base = df46cf8ef
-	trimbase = 4431ad071
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
