--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = e8f934b5d
-	trimbase = 
+	base = 068cbdcaf
+	trimbase = e8f934b5d
 	parent = upstream
 	previous = 31f485684
