--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = c29f95f45
-	trimbase = 
+	base = a287664cf
+	trimbase = c29f95f45
 	parent = upstream
 	previous = 31f485684
