--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = 94db17a89
-	trimbase = d05a4c411
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
