--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = 9fe0f7aa5
-	trimbase = 
+	base = e2750a482
+	trimbase = 9fe0f7aa5
 	parent = upstream
 	previous = 31f485684
