--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = 77c7ae23d
-	trimbase = 
+	base = a10fb4e96
+	trimbase = 77c7ae23d
 	parent = upstream
 	previous = 31f485684
