--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = 8b692680c
-	trimbase = 1c863b545
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
