--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
 	base = 6dd33b730
-	trimbase = 7f818eb24
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
