--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = a93b6c683
-	trimbase = 
+	base = 83484d45e
+	trimbase = a93b6c683
 	parent = upstream
 	previous = 31f485684
