--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = 3831a4a00
-	trimbase = 83e05e819
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
