--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = fdece7a1f
-	trimbase = 
+	base = 198d6c4da
+	trimbase = fdece7a1f
 	parent = upstream
 	previous = 31f485684
