--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
-	base = a4c5a945a
-	trimbase = 
+	base = 2aac75f05
+	trimbase = a4c5a945a
 	parent = upstream
 	previous = 31f485684
