--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = 5bb86192e
-	trimbase = ba1ac432d
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
