--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = 4d32e032d
-	trimbase = 
+	base = 523a437a4
+	trimbase = 4d32e032d
 	parent = upstream
 	previous = 31f485684
