--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = 5a30e8417
-	trimbase = ae0449e21
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
