--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
-	base = a0b41ec37
-	trimbase = 
+	base = 6c5970005
+	trimbase = a0b41ec37
 	parent = upstream
 	previous = 31f485684
