--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = 2ab4a5ba9
-	trimbase = 
+	base = d099c940d
+	trimbase = 2ab4a5ba9
 	parent = upstream
 	previous = 31f485684
