--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = d5a227a0d
-	trimbase = 5ba0d33d3
+	trimbase = 
 	parent = upstream
 	previous = 0ac576945
