--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = eb5410c94
-	trimbase = 
+	base = ee616ba0f
+	trimbase = eb5410c94
 	parent = upstream
 	previous = 31f485684
