--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = c70beaa94
-	trimbase = 
+	base = f6887b30f
+	trimbase = c70beaa94
 	parent = upstream
 	previous = 31f485684
