--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
-	base = 8a5fddae0
-	trimbase = 
+	base = 5275591c6
+	trimbase = 8a5fddae0
 	parent = upstream
 	previous = 31f485684
