--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = 1c0fe8128
-	trimbase = 50ee192bf
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
