--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
-	base = 51b7e476e
-	trimbase = 
+	base = 9c1e9b2cb
+	trimbase = 51b7e476e
 	parent = upstream
 	previous = 255bf185c
