--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
 	base = f57e94355
-	trimbase = d5031e1c3
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
