--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
 	base = 8ab935844
-	trimbase = 747b47b41
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
