--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
 	base = 518744516
-	trimbase = 5550679d9
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
