--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 31f485684
 	base = 46daba9a1
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = b76b87962
+	trimbase = 
