--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 255bf185c
-	base = 7c1f614b1
+	base = 7d0ab7a38
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 7c1f614b1
