--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 31f485684
 	base = aa30c5191
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 9de5d84dc
+	trimbase = 
