--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 255bf185c
-	base = 73169840d
+	base = 05e6f0813
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 
+	trimbase = 73169840d
