--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = a5f46d546
-	trimbase = 
+	base = fa7e71309
+	trimbase = a5f46d546
 	parent = upstream
 	previous = 255bf185c
