--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
 	base = 24ba8c130
-	trimbase = 7d845c4c0
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
