--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = 3fb925415
-	trimbase = 
+	base = d81a428a7
+	trimbase = 3fb925415
 	parent = upstream
 	previous = 255bf185c
