--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
-	base = 23a28c9ba
-	trimbase = 
+	base = 13274a5a3
+	trimbase = 23a28c9ba
 	parent = upstream
 	previous = 255bf185c
