--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
 	base = f13fe33ba
-	trimbase = 0e295940b
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
