--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = 03dd2cb86
-	trimbase = 
+	base = cc5ff1c4f
+	trimbase = 03dd2cb86
 	parent = upstream
 	previous = 255bf185c
