--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = ee46b5d9a
-	trimbase = 
+	base = 2ecce1524
+	trimbase = ee46b5d9a
 	parent = upstream
 	previous = 255bf185c
