--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = 2cbf7c19d
-	trimbase = 35ed53e95
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
