--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = d1c09c113
-	trimbase = 
+	base = 1058871e4
+	trimbase = d1c09c113
 	parent = upstream
 	previous = 255bf185c
