--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = 70c0f2438
-	trimbase = 
+	base = 8e377d131
+	trimbase = 70c0f2438
 	parent = upstream
 	previous = 255bf185c
