--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = aed524616
-	trimbase = c6e9722ba
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
