--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = 1ea0edbc8
-	trimbase = 
+	base = e21a2e066
+	trimbase = 1ea0edbc8
 	parent = upstream
 	previous = 255bf185c
