--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = 198d6c4da
-	trimbase = fdece7a1f
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
