--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
-	base = d7b77705d
-	trimbase = 
+	base = da5976ba0
+	trimbase = d7b77705d
 	parent = upstream
 	previous = 255bf185c
