--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
 	base = 480dbf05b
-	trimbase = 338ba6db1
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
