--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
-	base = bf4182b2b
-	trimbase = 
+	base = 47d04b82d
+	trimbase = bf4182b2b
 	parent = upstream
 	previous = 255bf185c
