--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = 813c2dab2
-	trimbase = 011c9831e
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
