--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = d099c940d
-	trimbase = 2ab4a5ba9
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
