--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = 9b4d18573
-	trimbase = 
+	base = 2fb2c69a6
+	trimbase = 9b4d18573
 	parent = upstream
 	previous = 255bf185c
