--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = ee616ba0f
-	trimbase = eb5410c94
+	trimbase = 
 	parent = upstream
 	previous = 31f485684
