--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = 7dd98c05d
-	trimbase = 
+	base = 3260c1344
+	trimbase = 7dd98c05d
 	parent = upstream
 	previous = 255bf185c
