--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = 6896ce85e
-	trimbase = 
+	base = acccf9927
+	trimbase = 6896ce85e
 	parent = upstream
 	previous = 255bf185c
