--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
-	base = 163debbb2
-	trimbase = 
+	base = 0dd2bc15e
+	trimbase = 163debbb2
 	parent = upstream
 	previous = 255bf185c
