--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
 	base = c68fc5bb7
-	trimbase = c6ec496ff
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
