--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
 	base = 078caf4f7
-	trimbase = 7ed608782
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
