--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
 	base = 63aae52e3
-	trimbase = 14f9d3c0e
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
