--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = 5b6e5cacd
-	trimbase = 
+	base = 640ba7b44
+	trimbase = 5b6e5cacd
 	parent = upstream
 	previous = bb965c3b9
