--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
 	base = 0eb0e9291
-	trimbase = 54c76282b
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
