--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 255bf185c
 	base = 7d0ab7a38
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 7c1f614b1
+	trimbase = 
