--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bb965c3b9
-	base = bb6b7d795
+	base = 3261b7e56
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = bb6b7d795
