--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 255bf185c
 	base = 05e6f0813
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 73169840d
+	trimbase = 
