--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
 	base = fa7e71309
-	trimbase = a5f46d546
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
