--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = df50b9a84
-	trimbase = 
+	base = d72843db0
+	trimbase = df50b9a84
 	parent = upstream
 	previous = bb965c3b9
