--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
 	base = d81a428a7
-	trimbase = 3fb925415
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
