--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = 20703786f
-	trimbase = 
+	base = 31f623f66
+	trimbase = 20703786f
 	parent = upstream
 	previous = bb965c3b9
