--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
 	base = 6f0873321
-	trimbase = a2870f620
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
