--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
-	base = cbe1d3566
-	trimbase = 
+	base = 2c08e6821
+	trimbase = cbe1d3566
 	parent = upstream
 	previous = bb965c3b9
