--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = bc769eb30
-	trimbase = 
+	base = 0d0b9b468
+	trimbase = bc769eb30
 	parent = upstream
 	previous = bb965c3b9
