--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
 	base = f183b2228
-	trimbase = fae4d7561
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
