--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = 61dc77e6c
-	trimbase = 
+	base = cad169ece
+	trimbase = 61dc77e6c
 	parent = upstream
 	previous = bb965c3b9
