--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = df01c54bc
-	trimbase = 
+	base = 935f77838
+	trimbase = df01c54bc
 	parent = upstream
 	previous = bb965c3b9
