--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = d31547105
-	trimbase = ef1d7ba72
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
