--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = a790d8c29
-	trimbase = 
+	base = 95ddb4a82
+	trimbase = a790d8c29
 	parent = upstream
 	previous = bb965c3b9
