--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = e21a2e066
-	trimbase = 1ea0edbc8
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
