--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
 	base = 1820cdfe2
-	trimbase = fa48d96e8
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
