--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = c43ae794e
-	trimbase = 
+	base = b1c407d32
+	trimbase = c43ae794e
 	parent = upstream
 	previous = bb965c3b9
