--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = 04f440c81
-	trimbase = 4d1bcc3c3
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
