--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = 3058f5f44
-	trimbase = 
+	base = adbb9a8c9
+	trimbase = 3058f5f44
 	parent = upstream
 	previous = bb965c3b9
