--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
-	base = 2177179f6
-	trimbase = 
+	base = 5f363477d
+	trimbase = 2177179f6
 	parent = upstream
 	previous = bb965c3b9
