--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
 	base = 47d04b82d
-	trimbase = bf4182b2b
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
