--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
-	base = e6f7696ad
-	trimbase = 
+	base = a74f6b46b
+	trimbase = e6f7696ad
 	parent = upstream
 	previous = bb965c3b9
