--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = 4314bd790
-	trimbase = c03e01e5c
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
