--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = bf1bd3d2f
-	trimbase = 70b3f7fd1
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
