--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = e80c56531
-	trimbase = 3fe1b05dd
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
