--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
 	base = acccf9927
-	trimbase = 6896ce85e
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
