--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = bb8a01c54
-	trimbase = 
+	base = 882a75346
+	trimbase = bb8a01c54
 	parent = upstream
 	previous = bb965c3b9
