--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = 0dd2bc15e
-	trimbase = 163debbb2
+	trimbase = 
 	parent = upstream
 	previous = 255bf185c
