--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = cb9eb541d
-	trimbase = 3a5fa401a
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
