--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = b50dbfdc0
-	trimbase = 
+	base = 625704d5f
+	trimbase = b50dbfdc0
 	parent = upstream
 	previous = d4c0886c3
