--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = 8b28e0cdf
-	trimbase = 500a0524b
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
