--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
-	base = d80e02388
-	trimbase = 
+	base = e5f3b1b1b
+	trimbase = d80e02388
 	parent = upstream
 	previous = d4c0886c3
