--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = 12704c572
-	trimbase = 7b3570028
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
