--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = 438e663f3
-	trimbase = 
+	base = 291279917
+	trimbase = 438e663f3
 	parent = upstream
 	previous = d4c0886c3
