--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = c3e1ce3a5
-	trimbase = 89f9ef39f
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
