--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
-	base = 220f50553
-	trimbase = 
+	base = 204de2649
+	trimbase = 220f50553
 	parent = upstream
 	previous = d4c0886c3
