--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = c79f63221
-	trimbase = 2699a4e2d
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
