--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = 58ccfb7db
-	trimbase = 
+	base = 4cb690cf1
+	trimbase = 58ccfb7db
 	parent = upstream
 	previous = d4c0886c3
