--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = b44f1233f
-	trimbase = 
+	base = 14e788dea
+	trimbase = b44f1233f
 	parent = upstream
 	previous = d4c0886c3
