--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = 914ff19bb
-	trimbase = 
+	base = 6769731e0
+	trimbase = 914ff19bb
 	parent = upstream
 	previous = d4c0886c3
