--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
 	base = b1c407d32
-	trimbase = c43ae794e
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
