--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = 95b0ec20f
-	trimbase = 
+	base = 73a53b58e
+	trimbase = 95b0ec20f
 	parent = upstream
 	previous = d4c0886c3
