--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
-	base = e6be342de
-	trimbase = 
+	base = 10a018df2
+	trimbase = e6be342de
 	parent = upstream
 	previous = d4c0886c3
