--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = fb3662ff6
-	trimbase = 74a694821
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
