--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = 8f0c2867f
-	trimbase = 
+	base = 182df1309
+	trimbase = 8f0c2867f
 	parent = upstream
 	previous = d4c0886c3
