--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = c4513fd80
-	trimbase = a2c08695c
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
