--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = b2acc5bfd
-	trimbase = 
+	base = 4589aeb49
+	trimbase = b2acc5bfd
 	parent = upstream
 	previous = d4c0886c3
