--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
-	base = a1a40d3db
-	trimbase = 
+	base = 9f91854b7
+	trimbase = a1a40d3db
 	parent = upstream
 	previous = d4c0886c3
