--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = 8bf250931
-	trimbase = 
+	base = 73f1dc29e
+	trimbase = 8bf250931
 	parent = upstream
 	previous = d4c0886c3
