--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
-	base = 32493c47e
-	trimbase = 
+	base = 1b3e9e8d3
+	trimbase = 32493c47e
 	parent = upstream
 	previous = d4c0886c3
