--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = af92dd34d
-	trimbase = 
+	base = 7027d5a05
+	trimbase = af92dd34d
 	parent = upstream
 	previous = d4c0886c3
