--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
 	base = f6d2e9e7d
-	trimbase = 083f2b495
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
