--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = f616239e9
-	trimbase = 
+	base = f12ab010b
+	trimbase = f616239e9
 	parent = upstream
 	previous = d4c0886c3
