--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = d426fa003
-	trimbase = 
+	base = 77696dd34
+	trimbase = d426fa003
 	parent = upstream
 	previous = d4c0886c3
