--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = 50d0d1312
-	trimbase = 
+	base = e1642f3d0
+	trimbase = 50d0d1312
 	parent = upstream
 	previous = d4c0886c3
