--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
 	base = 4e5f67f54
-	trimbase = a40536842
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
